--- a/streaming_project/pom.xml
+++ b/streaming_project/pom.xml
@@ -7,6 +7,12 @@
     <groupId>bigdata</groupId>
     <artifactId>streaming</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+    <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka_2.10</artifactId>
+        <version>0.8.2.2</version>
+    </dependency>
+</dependencies>
 
 </project>
