--- a/streaming_project/pom.xml
+++ b/streaming_project/pom.xml
@@ -58,6 +58,18 @@
         <scope>system</scope>
         <systemPath>${project.basedir}/atom.jar</systemPath>
     </dependency>
+    <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-sql_2.10</artifactId>
+        <version>1.6.0</version>
+    </dependency>
+    <dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-sql_2.11</artifactId>
+    <version>1.3.1</version>
+</dependency>
+
+
 </dependencies>
 
 </project>
